fixing white space on the right

--- a/scss/layout/_comments.scss
+++ b/scss/layout/_comments.scss
@@ -1,4 +1,5 @@
 #comments {
+	overflow-x: hidden;
 	padding-bottom: 6.2rem;
 }
 
