--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -13,7 +13,7 @@ html {
 	// font-size: 10px;
 }
 body {
-	overflow-x: hidden;
+	// overflow-x: hidden;
 	height: 100%;
 	font-family: "Gilroy", sans-serif;
 	font-weight: normal;
